# ethercat_motor

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/comm/: error_manage.h  ethercat_communication.h  log.hpp
src/comm/: ethercat_communication.cpp  motor.cpp
